fix LinksHover h-scroll on mobile

--- a/app/global.css
+++ b/app/global.css
@@ -153,4 +153,13 @@ table {
   .perspective-1000 {
     perspective: 1000px;
   }
+
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
 }
